Fixed chat overflow scroll

--- a/client/public/assets/styles/main.css
+++ b/client/public/assets/styles/main.css
@@ -195,7 +195,7 @@ svg g polyline {
 }
 .list-padding {
   min-height: 480px;
-  height: 80%;
+  height: 600px;
   overflow-y:scroll;
   padding: 0 5px 0 15px;
 }
@@ -214,7 +214,7 @@ svg g polyline {
   margin: auto 10px;
   vertical-align: top;
 }
-.list-padding bubble{
+/*.list-padding bubble{
   display: inline;
   top: 0;
   bottom: 0;
@@ -222,7 +222,7 @@ svg g polyline {
   right: 0;
   margin: auto 10px;
   vertical-align: top;
-}
+}*/
 ::-webkit-scrollbar {
     height: 12px;
     width: 12px;
